--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:url" content="https://mementomori.social/the-mastodon-list">
 <meta property="og:title" content="The curated Mastodon list">
-<meta property="og:description" content="This is a list of all things related to Mastodon, an open source decentralized network. The list is updated regularly.">
+<meta property="og:description" content="This is a list of all things related to Mastodon, an open source decentralized platform. The list is updated regularly.">
 <meta property="og:image" content="https://mementomori.social/the-mastodon-list/og-image.jpg">
 <meta property="og:image:width" content="1024">
 <meta property="og:image:height" content="756">
 <meta property="og:type" content="website">
-<meta name="twitter:description" content="This is a list of all things related to Mastodon, an open source decentralized network. The list is updated regularly.">
+<meta name="twitter:description" content="This is a list of all things related to Mastodon, an open source decentralized platform. The list is updated regularly.">
 <meta name="twitter:site" content="@rolle">
 <meta name="twitter:creator" content="@rolle">
 <meta property="twitter:image" content="https://mementomori.social/the-mastodon-list/og-image.jpg">
@@ -35,7 +35,7 @@
       The Mastodon list
     </h1>
 
-    <p><a href="https://joinmastodon.org/">Mastodon</a> is the world's largest free, open source, decentralized microblogging network. See the Official category to learn more about the network. This list contains all the meaningful things, tools and services related to Mastodon. The list is updated regularly.</p>
+    <p><a href="https://joinmastodon.org/">Mastodon</a> is the world's largest free, open source, decentralized microblogging platform. See the Official category to learn more about the platform. This list contains all the meaningful things, tools and services related to Mastodon. The list is updated regularly.</p>
 
     <svg class="mastodon-logo" xmlns="http://www.w3.org/2000/svg" width="61.076954mm" height="65.47831mm" viewBox="0 0 216.4144 232.00976"><defs xmlns="http://www.w3.org/2000/svg"><linearGradient xmlns="http://www.w3.org/2000/svg" id="gradient" x2="0%" y2="100%" gradientUnits="userSpaceOnUse"><stop offset="0%" stop-color="#595ae5"/><stop offset="100%" stop-color="#4b33b2"/></linearGradient></defs><path xmlns="http://www.w3.org/2000/svg" d="M211.80734 139.0875c-3.18125 16.36625-28.4925 34.2775-57.5625 37.74875-15.15875 1.80875-30.08375 3.47125-45.99875 2.74125-26.0275-1.1925-46.565-6.2125-46.565-6.2125 0 2.53375.15625 4.94625.46875 7.2025 3.38375 25.68625 25.47 27.225 46.39125 27.9425 21.11625.7225 39.91875-5.20625 39.91875-5.20625l.8675 19.09s-14.77 7.93125-41.08125 9.39c-14.50875.7975-32.52375-.365-53.50625-5.91875C9.23234 213.82 1.40609 165.31125.20859 116.09125c-.365-14.61375-.14-28.39375-.14-39.91875 0-50.33 32.97625-65.0825 32.97625-65.0825C49.67234 3.45375 78.20359.2425 107.86484 0h.72875c29.66125.2425 58.21125 3.45375 74.8375 11.09 0 0 32.975 14.7525 32.975 65.0825 0 0 .41375 37.13375-4.59875 62.915" fill="url(#gradient)"/><path d="M177.50984 80.077v60.94125h-24.14375v-59.15c0-12.46875-5.24625-18.7975-15.74-18.7975-11.6025 0-17.4175 7.5075-17.4175 22.3525v32.37625H96.20734V85.42325c0-14.845-5.81625-22.3525-17.41875-22.3525-10.49375 0-15.74 6.32875-15.74 18.7975v59.15H38.90484V80.077c0-12.455 3.17125-22.3525 9.54125-29.675 6.56875-7.3225 15.17125-11.07625 25.85-11.07625 12.355 0 21.71125 4.74875 27.8975 14.2475l6.01375 10.08125 6.015-10.08125c6.185-9.49875 15.54125-14.2475 27.8975-14.2475 10.6775 0 19.28 3.75375 25.85 11.07625 6.36875 7.3225 9.54 17.22 9.54 29.675" fill="#fff"/></svg>
 
