--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
       <li><a href="https://fo.llow.social/roam">Roam with the Mastodon browser Extension</a>: Share interesting links and sites. Follow anyone on any instance. Boost and favorite posts with one click.</li>
     </ul>
 
+    <h2>Timeline and profile tools</h2>
+    <ul>
+      <li><a href="https://justmytoots.com">JustMyToots</a>: This little page displays the toots but not the boosts for a user.</li>
+    </ul>
+
   </section>
 
   <footer>
