--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
       <li><a href="https://mementomori.social/suomalaiset-mastodon-kayttajat/">Finnish Mastodon users</a></li>
     </ul>
 
+    <h2>Moving to Mastodon from Twitter</h2>
+    <ul>
+      <li><a href="https://www.movetodon.org/">Movetodon</a>: Find your Twitter Friends on Mastodon.</li>
+    </ul>
+
     <h2>Tools to follow users on other instances</h2>
     <ul>
       <li><a href="https://chrome.google.com/webstore/detail/graze-for-mastodon/epocinhmkcnjfjobnglchpbncndobblj">Graze for Mastodon (Chrome)</a>: Graze is 1-click follow, favorite, boost, and bookmark for Mastodon, no matter what instance you call home.</li>
