--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
 
     <h2>Regional lists</h2>
     <ul>
-      <li><a href="https://mementomori.social/suomalaiset-mastodon-kayttajat/">Finnish Mastodon users</a></li>
+      <li><a href="https://mementomori.social/suomalaiset-mastodon-kayttajat">Finnish Mastodon users</a></li>
+    </ul>
+
+    <h2>Find followers</h2>
+    <ul>
+      <li><a href="https://search.noc.social">Social Search</a>: Discover accounts across multiple Mastodon / Fediverse instances.</li>
     </ul>
 
     <h2>Moving to Mastodon from Twitter</h2>
