Add description for Finnish mastodon users

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <h2>Regional lists</h2>
     <ul>
-      <li><a href="https://mementomori.social/suomalaiset-mastodon-kayttajat">Finnish Mastodon users</a></li>
+      <li><a href="https://mementomori.social/suomalaiset-mastodon-kayttajat">Finnish Mastodon users</a>: A list for Finnish Mastodon users.</li>
     </ul>
 
     <h2>Find followers</h2>
