Add Mastodon Archive

--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
       <li><a href="https://justmytoots.com">JustMyToots</a>: This little page displays the toots but not the boosts for a user.</li>
     </ul>
 
+    <h2>Backup tools</h2>
+    <ul>
+      <li><a href="https://github.com/kensanata/mastodon-archive">Mastodon Archive</a>: Archive your statuses, favorites and media using the Mastodon API.</li>
+    </ul>
+
   </section>
 
   <footer>
