--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="fi">
 <head>
 <meta charset="UTF-8">
-<title>The curated Mastodon list</title>
+<title>The (opinionated) Mastodon list</title>
 <meta name="description" content="">
 <meta property="og:locale" content="fi">
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:url" content="https://mementomori.social/the-mastodon-list">
-<meta property="og:title" content="The curated Mastodon list">
+<meta property="og:title" content="The (opinionated) Mastodon list">
 <meta property="og:description" content="This is a list of all things related to Mastodon, an open source decentralized platform. The list is updated regularly.">
 <meta property="og:image" content="https://mementomori.social/the-mastodon-list/og-image.jpg">
 <meta property="og:image:width" content="1024">
@@ -32,7 +32,7 @@
   <section>
     <h1>
       <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 512 512"><path fill="currentColor" d="M64 144c26.5 0 48-21.5 48-48s-21.5-48-48-48S16 69.5 16 96s21.5 48 48 48zM192 64c-17.7 0-32 14.3-32 32s14.3 32 32 32H480c17.7 0 32-14.3 32-32s-14.3-32-32-32H192zm0 160c-17.7 0-32 14.3-32 32s14.3 32 32 32H480c17.7 0 32-14.3 32-32s-14.3-32-32-32H192zm0 160c-17.7 0-32 14.3-32 32s14.3 32 32 32H480c17.7 0 32-14.3 32-32s-14.3-32-32-32H192zM64 464c26.5 0 48-21.5 48-48s-21.5-48-48-48s-48 21.5-48 48s21.5 48 48 48zm48-208c0-26.5-21.5-48-48-48s-48 21.5-48 48s21.5 48 48 48s48-21.5 48-48z"/></svg>
-      The Mastodon list
+      The (opinionated) Mastodon list
     </h1>
 
     <p><a href="https://joinmastodon.org/">Mastodon</a> is the world's largest free, open source, decentralized microblogging platform. See the Official category to learn more about the platform. This list contains all the meaningful things, tools and services related to Mastodon. The list is updated regularly.</p>
