Add Mastodon Profile Redirect

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
       <li><a href="https://addons.mozilla.org/en-US/firefox/addon/graze/">Graze for Mastodon (Firefox)</a>: Graze is 1-click follow, favorite, boost, and bookmark for Mastodon, no matter what instance you call home.</li>
       <li><a href="https://github.com/raikasdev/mastodon4-redirect">Mastodon4-redirect</a>: A Chrome and Firefox extensions that redirects users from Mastodon4 instances to their home instance.</li>
       <li><a href="https://fo.llow.social/roam">Roam with the Mastodon browser Extension</a>: Share interesting links and sites. Follow anyone on any instance. Boost and favorite posts with one click.</li>
+      <li><a href="https://github.com/bramus/mastodon-profile-redirect">Mastodon Profile Redirect</a>: View Mastodon profiles on your Mastodon instance.</li>
     </ul>
 
     <h2>Timeline and profile tools</h2>
