--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <ul>
       <li><a href="https://www.movetodon.org">Movetodon</a>: Find your Twitter Friends on Mastodon.</li>
       <li><a href="https://debirdify.pruvisto.org/">Debirdify</a>: This website allows you to search the people you follow on Twitter for possible Mastodon/Fediverse accounts.</li>
+      <li><a href="https://twitodon.com/">Twitodon</a>: Find and follow your Twitter friends on Mastodon</li>
     </ul>
 
     <h2>Tools to follow users on other instances</h2>
