--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
     <h2>Moving to Mastodon from Twitter</h2>
     <ul>
       <li><a href="https://www.movetodon.org">Movetodon</a>: Find your Twitter Friends on Mastodon.</li>
-      <li><a href="https://debirdify.pruvisto.org/">Debirdify</a>: This website allows you to search the people you follow on Twitter for possible Mastodon/Fediverse accounts.</li>
-      <li><a href="https://twitodon.com/">Twitodon</a>: Find and follow your Twitter friends on Mastodon</li>
+      <li><a href="https://debirdify.pruvisto.org">Debirdify</a>: This website allows you to search the people you follow on Twitter for possible Mastodon/Fediverse accounts.</li>
+      <li><a href="https://twitodon.com">Twitodon</a>: Find and follow your Twitter friends on Mastodon</li>
+      <li><a href="https://fedifinder.glitch.me">Fedifinder</a>: Join the Fediverse in 5 easy steps</li>
     </ul>
 
     <h2>Tools to follow users on other instances</h2>
