Add Trunk categories to csv

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <h2>Find followers</h2>
     <ul>
       <li><a href="https://search.noc.social">Social Search</a>: Discover accounts across multiple Mastodon / Fediverse instances.</li>
+      <li><a href="https://hugo.gameiro.pt/trunk-to-csv">Trunk categories to csv</a>: This tool uses Trunk to generate a csv file that can be used on Mastodonto follow all the accounts from categories you choose.</li>
     </ul>
 
     <h2>Moving to Mastodon from Twitter</h2>
