--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <ul>
       <li><a href="https://search.noc.social">Social Search</a>: Discover accounts across multiple Mastodon / Fediverse instances.</li>
       <li><a href="https://hugo.gameiro.pt/trunk-to-csv">Trunk categories to csv</a>: This tool uses Trunk to generate a csv file that can be used on Mastodonto follow all the accounts from categories you choose.</li>
+      <li><a href="https://fedi.directory">Fedi.directory</a>: Interesting accounts to follow on Mastodon and the Fediverse.</li>
     </ul>
 
     <h2>Moving to Mastodon from Twitter</h2>
