Add Fediverse Directory

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       <li><a href="https://hugo.gameiro.pt/trunk-to-csv">Trunk categories to csv</a>: This tool uses Trunk to generate a csv file that can be used on Mastodonto follow all the accounts from categories you choose.</li>
       <li><a href="https://fedi.directory">Fedi.directory</a>: Interesting accounts to follow on Mastodon and the Fediverse.</li>
       <li><a href="https://www.fedified.com/">Fedified</a>: Reconnecting with your favorite follows is easier than ever.</li>
+      <li><a href="https://fedi.bihlink.com">Fediverse Directory</a>: Directory of people on Fediverse where you can search for other people with common interests to follow</li>
     </ul>
 
     <h2>Moving to Mastodon from Twitter</h2>
