--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <ul>
       <li><a href="https://www.movetodon.org">Movetodon</a>: Find your Twitter Friends on Mastodon.</li>
       <li><a href="https://debirdify.pruvisto.org">Debirdify</a>: This website allows you to search the people you follow on Twitter for possible Mastodon/Fediverse accounts.</li>
-      <li><a href="https://twitodon.com">Twitodon</a>: Find and follow your Twitter friends on Mastodon</li>
-      <li><a href="https://fedifinder.glitch.me">Fedifinder</a>: Join the Fediverse in 5 easy steps</li>
+      <li><a href="https://twitodon.com">Twitodon</a>: Find and follow your Twitter friends on Mastodon.</li>
+      <li><a href="https://fedifinder.glitch.me">Fedifinder</a>: Join the Fediverse in 5 easy steps.</li>
     </ul>
 
     <h2>Tools to follow users on other instances</h2>
@@ -71,6 +71,12 @@
       <li><a href="https://github.com/raikasdev/mastodon4-redirect">Mastodon4-redirect</a>: A Chrome and Firefox extensions that redirects users from Mastodon4 instances to their home instance.</li>
       <li><a href="https://fo.llow.social/roam">Roam with the Mastodon browser Extension</a>: Share interesting links and sites. Follow anyone on any instance. Boost and favorite posts with one click.</li>
       <li><a href="https://github.com/bramus/mastodon-profile-redirect">Mastodon Profile Redirect</a>: View Mastodon profiles on your Mastodon instance.</li>
+    </ul>
+
+    <h2>Embed tools</h2>
+    <ul>
+      <li><a href="https://fo.llow.social/goodies#follow-button">Fo.llow.social Follow Button</a>: Make it easy for people to follow you from anywhere.</li>
+      <li><a href="https://fo.llow.social/goodies#embed-timeline">Fo.llow.social Embed your Timeline</a>: Show your Mastodon profile and recent statuses on your website or blog.</li>
     </ul>
 
     <h2>Timeline and profile tools</h2>
