--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <ul>
       <li><a href="https://fo.llow.social/goodies#follow-button">Fo.llow.social Follow Button</a>: Make it easy for people to follow you from anywhere.</li>
       <li><a href="https://fo.llow.social/goodies#embed-timeline">Fo.llow.social Embed your Timeline</a>: Show your Mastodon profile and recent statuses on your website or blog.</li>
+      <li><a href="https://maplefeed.bihlink.com">MaPleFeed</a>: Embed Mastodon, Pleroma, Misskey or WordPress Fediverse profile feeds on any web page.</li>
     </ul>
 
     <h2>Timeline and profile tools</h2>
