--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 
     <h2>Tools to follow users on other instances</h2>
     <ul>
+      <li><a href="https://github.com/lartsch/FediAct">FediAct</a>: Chrome/Firefox extension that simplifies interactions on other Mastodon instances than your own.</li>
       <li><a href="https://chrome.google.com/webstore/detail/graze-for-mastodon/epocinhmkcnjfjobnglchpbncndobblj">Graze for Mastodon (Chrome)</a>: Graze is 1-click follow, favorite, boost, and bookmark for Mastodon, no matter what instance you call home.</li>
       <li><a href="https://addons.mozilla.org/en-US/firefox/addon/graze/">Graze for Mastodon (Firefox)</a>: Graze is 1-click follow, favorite, boost, and bookmark for Mastodon, no matter what instance you call home.</li>
       <li><a href="https://github.com/raikasdev/mastodon4-redirect">Mastodon4-redirect</a>: A Chrome and Firefox extensions that redirects users from Mastodon4 instances to their home instance.</li>
