--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
     <h2>Find followers</h2>
     <ul>
+      <li><a href="https://followgraph.vercel.app">Followgraph</a>: This tool allows you to expand your connection graph and find new people to follow. It works by looking up your "follows' follows".</li>
       <li><a href="https://search.noc.social">Social Search</a>: Discover accounts across multiple Mastodon / Fediverse instances.</li>
       <li><a href="https://hugo.gameiro.pt/trunk-to-csv">Trunk categories to csv</a>: This tool uses Trunk to generate a csv file that can be used on Mastodonto follow all the accounts from categories you choose.</li>
       <li><a href="https://fedi.directory">Fedi.directory</a>: Interesting accounts to follow on Mastodon and the Fediverse.</li>
