--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <li><a href="https://fedi.directory">Fedi.directory</a>: Interesting accounts to follow on Mastodon and the Fediverse.</li>
       <li><a href="https://www.fedified.com/">Fedified</a>: Reconnecting with your favorite follows is easier than ever.</li>
       <li><a href="https://fedi.bihlink.com">Fediverse Directory</a>: Directory of people on Fediverse where you can search for other people with common interests to follow</li>
+      <li><a href="https://fediverse.info/explore/people">Fediverse.info</a>: Discover people who have mutual interests</li>
     </ul>
 
     <h2>Moving to Mastodon from Twitter</h2>
