--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
       <li><a href="https://github.com/bramus/mastodon-profile-redirect">Mastodon Profile Redirect</a>: View Mastodon profiles on your Mastodon instance.</li>
     </ul>
 
+    <h2>News aggregators</h2>
+    <ul>
+      <li><a href="https://news.feedseer.com">FeedSeer News for Mastodon</a>: FeedSeer News allows you to see the most popular links that have appeared in your Mastodon feed over the past day.</li>
+    </ul>
+
     <h2>Embed tools</h2>
     <ul>
       <li><a href="https://fo.llow.social/goodies#follow-button">Fo.llow.social Follow Button</a>: Make it easy for people to follow you from anywhere.</li>
