--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@
       <li><a href="https://maplefeed.bihlink.com">MaPleFeed</a>: Embed Mastodon, Pleroma, Misskey or WordPress Fediverse profile feeds on any web page.</li>
     </ul>
 
-    <h2>Timeline and profile tools</h2>
+    <h2>Timeline, search and profile tools</h2>
     <ul>
       <li><a href="https://justmytoots.com">JustMyToots</a>: This little page displays the toots but not the boosts for a user.</li>
+      <li><a href="https://www.tootfinder.ch/">Tootfinder</a>: Proof of concept of an opt-in global Mastodon search.</li>
     </ul>
 
     <h2>Backup tools</h2>
