--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 
     <h2>Timeline, search and profile tools</h2>
     <ul>
+      <li><a href="https://cathode.church/fedi-scraper-counter.html">Fedi-Scraper Counter</a>: Counts the number of days since someone tried to make a search tool for the Fediverse.</li>
       <li><a href="https://justmytoots.com">JustMyToots</a>: This little page displays the toots but not the boosts for a user.</li>
       <li><a href="https://www.tootfinder.ch/">Tootfinder</a>: Proof of concept of an opt-in global Mastodon search.</li>
     </ul>
