--- a/index.html
+++ b/index.html
@@ -98,11 +98,16 @@
       <li><a href="https://maplefeed.bihlink.com">MaPleFeed</a>: Embed Mastodon, Pleroma, Misskey or WordPress Fediverse profile feeds on any web page.</li>
     </ul>
 
+    <h2>List tools</h2>
+    <ul>
+      <li><a href="https://federike.social">Federike</a>: Federike is a web app made to help you organize your Mastodon using lists.</li>
+    </ul>
+
     <h2>Timeline, search and profile tools</h2>
     <ul>
       <li><a href="https://cathode.church/fedi-scraper-counter.html">Fedi-Scraper Counter</a>: Counts the number of days since someone tried to make a search tool for the Fediverse.</li>
       <li><a href="https://justmytoots.com">JustMyToots</a>: This little page displays the toots but not the boosts for a user.</li>
-      <li><a href="https://www.tootfinder.ch/">Tootfinder</a>: Proof of concept of an opt-in global Mastodon search.</li>
+      <li><a href="https://www.tootfinder.ch">Tootfinder</a>: Proof of concept of an opt-in global Mastodon search.</li>
     </ul>
 
     <h2>Backup tools</h2>
