--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
       <li><a href="https://cathode.church/fedi-scraper-counter.html">Fedi-Scraper Counter</a>: Counts the number of days since someone tried to make a search tool for the Fediverse.</li>
       <li><a href="https://justmytoots.com">JustMyToots</a>: This little page displays the toots but not the boosts for a user.</li>
       <li><a href="https://www.tootfinder.ch">Tootfinder</a>: Proof of concept of an opt-in global Mastodon search.</li>
+      <li><a href="https://fedisearch.skorpil.cz">FediSearch</a>: Search people on Fediverse.</li>
     </ul>
 
     <h2>Backup tools</h2>
