--- a/index.html
+++ b/index.html
@@ -86,9 +86,10 @@
       <li><a href="https://github.com/bramus/mastodon-profile-redirect">Mastodon Profile Redirect</a>: View Mastodon profiles on your Mastodon instance.</li>
     </ul>
 
-    <h2>News aggregators</h2>
+    <h2>News and top post aggregators</h2>
     <ul>
       <li><a href="https://news.feedseer.com">FeedSeer News for Mastodon</a>: FeedSeer News allows you to see the most popular links that have appeared in your Mastodon feed over the past day.</li>
+      <li><a href="https://quintsns.pianeta.uno">Quintessence</a>: Quintessence shows you the top links that the people that you follow on Mastodon tooted or boosted in the last hours and the most notable toots that appeared in your timeline.</a></li>
     </ul>
 
     <h2>Embed tools</h2>
