--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
       <li><a href="https://github.com/bramus/mastodon-profile-redirect">Mastodon Profile Redirect</a>: View Mastodon profiles on your Mastodon instance.</li>
     </ul>
 
+    <h2>Statistics and metrics</h2>
+    <ul>
+      <li><a href="https://mastometrics.com">MastoMetrics</a>: Track the growth of your Mastodon Account</li>
+    </ul>
+
     <h2>News and top post aggregators</h2>
     <ul>
       <li><a href="https://news.feedseer.com">FeedSeer News for Mastodon</a>: FeedSeer News allows you to see the most popular links that have appeared in your Mastodon feed over the past day.</li>
