--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <h2>Moving to Mastodon from Twitter</h2>
     <ul>
-      <li><a href="https://mastodon-flock.vercel.app">Mastodon Flock</a>: This program will guide you through finding your Twitter contacts on the Fediverse.</li>
+      <li><a href="https://mastodon-flock.vercel.app">Mastodon Flock</a>: Mastodon Flock is a web application that looks for Twitter users on ActivityPub-enabled platforms (the "Fediverse"), such as Mastodon.</li>
       <li><a href="https://www.movetodon.org">Movetodon</a>: Find your Twitter Friends on Mastodon.</li>
       <li><a href="https://debirdify.pruvisto.org">Debirdify</a>: This website allows you to search the people you follow on Twitter for possible Mastodon/Fediverse accounts.</li>
       <li><a href="https://twitodon.com">Twitodon</a>: Find and follow your Twitter friends on Mastodon.</li>
