--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
       <li><a href="https://fedisearch.skorpil.cz">FediSearch</a>: Search people on Fediverse.</li>
     </ul>
 
+    <h2>Tools for server admins</h2>
+    <ul>
+      <li><a href="https://github.com/nanos/FediFetcher">FediFetcher</a>: A tool for Mastodon that automatically fetches missing replies and posts from other fediverse instances, and adds them to your own Mastodon instance.</li>
+    </ul>
+
     <h2>Backup tools</h2>
     <ul>
       <li><a href="https://github.com/kensanata/mastodon-archive">Mastodon Archive</a>: Archive your statuses, favorites and media using the Mastodon API.</li>
