--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     <h2>Tools for server admins</h2>
     <ul>
       <li><a href="https://github.com/nanos/FediFetcher">FediFetcher</a>: A tool for Mastodon that automatically fetches missing replies and posts from other fediverse instances, and adds them to your own Mastodon instance.</li>
+      <li><a href="https://combine.social">Combine.social</a>: An easy and simple solution to missing replies in your home timeline or apparently empty profiles showing up in likes, boosts or follow requests showing up in your notifications.</li>
     </ul>
 
     <h2>Backup tools</h2>
