--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
     <h2>Find followers</h2>
     <ul>
+      <li><a href="https://fedifollows.fedified.com">FediFollows</a>: Highlighting interesting accounts to follow on Mastodon and the Fediverse, supports 1-click follows.</li>
       <li><a href="https://streetpass.social/">Streetpass</a>: StreetPass will build a list of Mastodon users made up of the websites you go to.</li>
       <li><a href="https://followgraph.vercel.app">Followgraph</a>: This tool allows you to expand your connection graph and find new people to follow. It works by looking up your "follows' follows".</li>
       <li><a href="https://search.noc.social">Social Search</a>: Discover accounts across multiple Mastodon / Fediverse instances.</li>
