Add Mastodon Circle Creator

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <h2>Find followers</h2>
     <ul>
       <li><a href="https://fedifollows.fedified.com">FediFollows</a>: Highlighting interesting accounts to follow on Mastodon and the Fediverse, supports 1-click follows.</li>
+      <li><a href="https://whomtofollow.com">Whom to Follow</a>: Find accounts you'll love by searching the network of accounts you already follow.</li>
       <li><a href="https://streetpass.social/">Streetpass</a>: StreetPass will build a list of Mastodon users made up of the websites you go to.</li>
       <li><a href="https://followgraph.vercel.app">Followgraph</a>: This tool allows you to expand your connection graph and find new people to follow. It works by looking up your "follows' follows".</li>
       <li><a href="https://search.noc.social">Social Search</a>: Discover accounts across multiple Mastodon / Fediverse instances.</li>
@@ -91,6 +92,7 @@
     <h2>Statistics and metrics</h2>
     <ul>
       <li><a href="https://mastometrics.com">MastoMetrics</a>: Track the growth of your Mastodon Account</li>
+      <li><a href="https://circle.grasserisen.de">Mastodon Circle Creator</a>: Remember Twitter Circle generator? This is exactly that, but for Mastodon.</li>
     </ul>
 
     <h2>News and top post aggregators</h2>
