--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
     <ul>
       <li><a href="https://github.com/nanos/FediFetcher">FediFetcher</a>: A tool for Mastodon that automatically fetches missing replies and posts from other fediverse instances, and adds them to your own Mastodon instance.</li>
       <li><a href="https://combine.social">Combine.social</a>: An easy and simple solution to missing replies in your home timeline or apparently empty profiles showing up in likes, boosts or follow requests showing up in your notifications.</li>
+      <li><a href="https://github.com/VyrCossont/mastodon/pull/8">Extended post and account search</a>: A patch for your Mastodon instance that allows proper full-text search of all federated content, including a large range of advanced search operators. <a href="https://github.com/VyrCossont/mastodon/pull/9">A Glitch version</a> is also available.</li>
     </ul>
 
     <h2>Backup tools</h2>
