--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
     <ul>
       <li><a href="https://mastometrics.com">MastoMetrics</a>: Track the growth of your Mastodon Account</li>
       <li><a href="https://circle.grasserisen.de">Mastodon Circle Creator</a>: Remember Twitter Circle generator? This is exactly that, but for Mastodon.</li>
+      <li><a href="https://data.stefanbohacek.dev/projects/fediverse">Explore your fediverse connections</a>: A data visualization project by Stefan Bohacek that lets you explore your connections across the Fediverse. Supports Mastodon, Friendica, Pleroma/Akkoma, Misskey/Calckey.</li>
     </ul>
 
     <h2>News and top post aggregators</h2>
