--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
 
     <h2>News and top post aggregators</h2>
     <ul>
+      <li><a href="https://feditrends.com/">Feditrends</a>: Aggregating what's trending across the fediverse.</li>
+      <li><a href="https://fediverse-explorer.stefanbohacek.dev/?tag=fediverse">Fediverse Explorer</a>: Browse most recent public posts across the fediverse by hashtag.</li>
       <li><a href="https://news.feedseer.com">FeedSeer News for Mastodon</a>: FeedSeer News allows you to see the most popular links that have appeared in your Mastodon feed over the past day.</li>
       <li><a href="https://quintsns.pianeta.uno">Quintessence</a>: Quintessence shows you the top links that the people that you follow on Mastodon tooted or boosted in the last hours and the most notable toots that appeared in your timeline.</a></li>
     </ul>
