--- a/index.html
+++ b/index.html
@@ -106,11 +106,12 @@
       <li><a href="https://quintsns.pianeta.uno">Quintessence</a>: Quintessence shows you the top links that the people that you follow on Mastodon tooted or boosted in the last hours and the most notable toots that appeared in your timeline.</a></li>
     </ul>
 
-    <h2>Embed tools</h2>
+    <h2>Embed and sharing tools</h2>
     <ul>
       <li><a href="https://fo.llow.social/goodies#follow-button">Fo.llow.social Follow Button</a>: Make it easy for people to follow you from anywhere.</li>
       <li><a href="https://fo.llow.social/goodies#embed-timeline">Fo.llow.social Embed your Timeline</a>: Show your Mastodon profile and recent statuses on your website or blog.</li>
       <li><a href="https://maplefeed.bihlink.com">MaPleFeed</a>: Embed Mastodon, Pleroma, Misskey or WordPress Fediverse profile feeds on any web page.</li>
+      <li><a href="https://mstdn.link">Share Mastodon posts better</a>: By default, the Messages app on iOS and macOS shows a pretty meh preview of Mastodon links. Now you can make them look so much nicer!</li>
     </ul>
 
     <h2>List tools</h2>
