--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 
     <h2>Embed and sharing tools</h2>
     <ul>
+      <li><a href="https://mastopoet.ohjelmoi.fi">Mastopoet</a>: A tool that allows you to capture Mastodon posts as beautiful images and share them across the Internet.</li>
       <li><a href="https://fo.llow.social/goodies#follow-button">Fo.llow.social Follow Button</a>: Make it easy for people to follow you from anywhere.</li>
       <li><a href="https://fo.llow.social/goodies#embed-timeline">Fo.llow.social Embed your Timeline</a>: Show your Mastodon profile and recent statuses on your website or blog.</li>
       <li><a href="https://maplefeed.bihlink.com">MaPleFeed</a>: Embed Mastodon, Pleroma, Misskey or WordPress Fediverse profile feeds on any web page.</li>
