Add FediBuzz and Fedi on Fire

--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
       <li><a href="https://fediverse-explorer.stefanbohacek.dev/?tag=fediverse">Fediverse Explorer</a>: Browse most recent public posts across the fediverse by hashtag.</li>
       <li><a href="https://news.feedseer.com">FeedSeer News for Mastodon</a>: FeedSeer News allows you to see the most popular links that have appeared in your Mastodon feed over the past day.</li>
       <li><a href="https://quintsns.pianeta.uno">Quintessence</a>: Quintessence shows you the top links that the people that you follow on Mastodon tooted or boosted in the last hours and the most notable toots that appeared in your timeline.</a></li>
+      <li><a href="https://fedi.buzz">FediBuzz</a>: Trends in the Fediverse</a></li>
+      <li><a href="https://fedionfire.stream">Fedi on Fire</a>: Watch every Mastodon/Fediverse post in real-time - filter the firehose.</a></li>
     </ul>
 
     <h2>Embed and sharing tools</h2>
