Add fediview and foryoufeed

--- a/index.html
+++ b/index.html
@@ -121,7 +121,13 @@
     <ul>
       <li><a href="https://federike.social">Federike</a>: Federike is a web app made to help you organize your Mastodon using lists.</li>
     </ul>
-
+    
+    <h2>Algorithms and feeds</h2>
+    <ul>
+      <li><a href="https://fediview.com">fediview</a>: The algorithmic timeline for Mastodon</li>
+      <li><a href="https://foryoufeed.vercel.app">foryoufeed</a>: Fedi-Feed features a customizable algorithm for sorting your feed.</a>
+    </ul>
+    
     <h2>Timeline, search and profile tools</h2>
     <ul>
       <li><a href="https://cathode.church/fedi-scraper-counter.html">Fedi-Scraper Counter</a>: Counts the number of days since someone tried to make a search tool for the Fediverse.</li>
