--- a/index.html
+++ b/index.html
@@ -128,8 +128,9 @@
       <li><a href="https://foryoufeed.vercel.app">foryoufeed</a>: Fedi-Feed features a customizable algorithm for sorting your feed.</a>
     </ul>
     
-    <h2>Timeline, search and profile tools</h2>
+    <h2>Timeline, discoverability and profile tools</h2>
     <ul>
+      <li><a href="https://chromewebstore.google.com/detail/substitoot-%E2%80%94-improved-mas/oedncfcpfcmehalbpdnekgaaldefpaef">Substitoot — improved Mastodon federation</a>: Loads missing replies to boosted toots directly from the source server.</li>
       <li><a href="https://cathode.church/fedi-scraper-counter.html">Fedi-Scraper Counter</a>: Counts the number of days since someone tried to make a search tool for the Fediverse.</li>
       <li><a href="https://justmytoots.com">JustMyToots</a>: This little page displays the toots but not the boosts for a user.</li>
       <li><a href="https://www.tootfinder.ch">Tootfinder</a>: Proof of concept of an opt-in global Mastodon search.</li>
