Add Mastodon starter packs

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
     <h2>Find followers</h2>
     <ul>
+      <li><a href="https://fedidevs.com/starter-packs/?tab=community">Mastodon starter packs</a>: Get follow recommendations and follow people directly via public lists and community starter packs</li>
       <li><a href="https://fedifollows.fedified.com">FediFollows</a>: Highlighting interesting accounts to follow on Mastodon and the Fediverse, supports 1-click follows.</li>
       <li><a href="https://whomtofollow.com">Whom to Follow</a>: Find accounts you'll love by searching the network of accounts you already follow.</li>
       <li><a href="https://streetpass.social/">Streetpass</a>: StreetPass will build a list of Mastodon users made up of the websites you go to.</li>
