Add Fedi Circle Creator

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
     <h2>Statistics and metrics</h2>
     <ul>
       <li><a href="https://mastometrics.com">MastoMetrics</a>: Track the growth of your Mastodon Account</li>
+      <li><a href="https://data.natty.sh/fedi-circles">Fedi Circle Creator</a>: Producing a visual representation of Mastodon interactions with JS</li>
       <li><a href="https://circle.grasserisen.de">Mastodon Circle Creator</a>: Remember Twitter Circle generator? This is exactly that, but for Mastodon.</li>
       <li><a href="https://data.stefanbohacek.dev/projects/fediverse">Explore your fediverse connections</a>: A data visualization project by Stefan Bohacek that lets you explore your connections across the Fediverse. Supports Mastodon, Friendica, Pleroma/Akkoma, Misskey/Calckey.</li>
       <li><a href="https://fedidb.org/">FediDB</a>: Fediverse user growth, monthly active users and more.</li>
