Add Miscellaneous and Fedipact

--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
       <li><a href="https://github.com/kensanata/mastodon-archive">Mastodon Archive</a>: Archive your statuses, favorites and media using the Mastodon API.</li>
     </ul>
 
+    <h2>Miscellaneous</h2>
+    <ul>
+      <li><a href="https://fedipact.veganism.social">#Fedipact</a>: The instances blocking Zuckerberg's Threads.net</li>
+    </ul>
   </section>
 
   <footer>
