Add Fedi on Fire

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
     <h2>Miscellaneous</h2>
     <ul>
       <li><a href="https://fedipact.veganism.social">#Fedipact</a>: The instances blocking Zuckerberg's Threads.net</li>
+      <li><a href="https://fedionfire.stream">Fedi on Fire</a>: See Fediverse as a live stream</li>
     </ul>
   </section>
 
