--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
     <h2>Miscellaneous</h2>
     <ul>
       <li><a href="https://fedipact.veganism.social">#Fedipact</a>: The instances blocking Zuckerberg's Threads.net</li>
-      <li><a href="https://fedionfire.stream">Fedi on Fire</a>: See Fediverse as a live stream</li>
+      <li><s><a href="https://fedionfire.stream">Fedi on Fire</a>: See Fediverse as a live stream</s></li>
+      <li><a href="https://fediverse.observer">Fediverse Observer</a>: Let's find you a fediverse home!</li>
     </ul>
   </section>
 
