Add fediverse:creator meta tag

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <meta name="twitter:description" content="This is a list of all things related to Mastodon, an open source decentralized platform. The list is updated regularly.">
 <meta name="twitter:site" content="@rolle">
 <meta name="twitter:creator" content="@rolle">
+<meta property="fediverse:creator" name="fediverse:creator" content="rolle@mementomori.social">
 <meta property="twitter:image" content="https://mementomori.social/the-mastodon-list/og-image.jpg">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="viewport" content="width=device-width, initial-scale=1">
