Move links to correct categories

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 
     <h2>Timeline, discoverability and profile tools</h2>
     <ul>
+      <li><a href="https://fediverse.observer">Fediverse Observer</a>: Let's find you a fediverse home!</li>
       <li><a href="https://chromewebstore.google.com/detail/substitoot-%E2%80%94-improved-mas/oedncfcpfcmehalbpdnekgaaldefpaef">Substitoot — improved Mastodon federation</a>: Loads missing replies to boosted toots directly from the source server.</li>
-      <li><a href="https://cathode.church/fedi-scraper-counter.html">Fedi-Scraper Counter</a>: Counts the number of days since someone tried to make a search tool for the Fediverse.</li>
       <li><a href="https://justmytoots.com">JustMyToots</a>: This little page displays the toots but not the boosts for a user.</li>
       <li><a href="https://www.tootfinder.ch">Tootfinder</a>: Proof of concept of an opt-in global Mastodon search.</li>
       <li><a href="https://github.com/nanos/FediFetcher">FediFetcher</a>: A tool for Mastodon that automatically fetches missing replies and posts from other fediverse instances, and adds them to your own Mastodon instance.</li>
@@ -135,7 +135,7 @@
     <h2>Miscellaneous</h2>
     <ul>
       <li><a href="https://fedipact.veganism.social">#Fedipact</a>: The instances blocking Zuckerberg's Threads.net</li>
-      <li><a href="https://fediverse.observer">Fediverse Observer</a>: Let's find you a fediverse home!</li>
+      <li><a href="https://cathode.church/fedi-scraper-counter.html">Fedi-Scraper Counter</a>: A toxic list of programmers who have tried to build tools for the Fediverse. People have been added to this list without their consent.</li>
     </ul>
   </section>
 
